rpi-fix minor bug on iexplorer

--- a/RPi_WebServer/design_tests/css/airfishbowl-rpi.css
+++ b/RPi_WebServer/design_tests/css/airfishbowl-rpi.css
@@ -42,6 +42,7 @@ body {
 	}
 	.fish-entry:focus {
 		color: white;
+		text-decoration: none;
 	}
 
 .fish-entry-container {
